# TBChess

./: .gitignore  README.md  build.sh  deploy.sh  deploy.txt  run.sh
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/com/example/tbchessapp/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: config.dart  main.dart
app/lib/pages/: account.dart  clock.dart  event_details.dart  events.dart  leaderboard.dart  login.dart  login_email.dart  login_otp.dart  registration.dart
app/lib/utils/: date.dart  events.dart  games.dart  push.dart  user.dart
app/lib/widgets/: adjust_score_dialog.dart  countdown_timer.dart  event_datetime.dart  event_game_list.dart  event_leaderboard.dart  event_registerbutton.dart  event_signup.dart  event_vs.dart  report_score_dialog.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
app/macos/Runner/Configs/: AppInfo.xcconfig
app/web/: index.html  manifest.json  service-worker.js
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
backend/: .gitignore  dev.sh  go.mod  go.sum  main.go  webpush.go
backend/migrations/: 1753748026_collections_snapshot.go  1754336726_updated_users.go  1754587961_updated_users.go  1754595650_updated_users.go  1755052336_updated_games_list.go  1755789551_updated_events.go  1755789639_updated_events.go  1755809066_updated_event_signups.go  1755809107_updated_event_signups_list.go  1755885370_updated_events_list.go
backend/swisser/: swisser.go
swisser/: CMakeLists.txt  README.md
swisser/DubovSystem/: Player.cpp  Player.hpp  Tournament.cpp  swisser.cpp
swisser/src/: swisser.cpp  validate.cpp  validate.hpp
swisser/src/swisssystems/: common.cpp  common.h  roundrobin.cpp  roundrobin.h
swisser/test/: stress.py
